--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,7 @@
+# Ignore everything
+*
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual Env
-.venv
-.venv*/
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Project Specific
-all_datasets/
-chroma_db/
-chatlogs.db
+# Whitelist specific files
+!tunisian_datasets.zip
+!.gitignore
+!.gitattributes
